--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ a,
   transition: all 300ms ease;
 }
 
+
 /* DESKTOP NAV */
 
 nav,
@@ -308,10 +309,25 @@ section {
   height: 80%;
 }
 
+.section__pic-cleber {
+    height: 400px;
+    width: 400px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+
+
 .section__pic-container {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  border-radius: -50px
+  
 }
 
 /* EXPERIENCE SECTION */
@@ -387,6 +403,7 @@ article .icon {
   justify-content: center;
   flex-direction: column;
   height: 70vh;
+  padding-top: 320px;
 }
 
 .contact-info-upper-container {
